// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`styles connection and delivery errors distinctly from retry information 1`] = `
{
  "controls": [
    {
      "label": "Check connection",
      "style": {
        "background": "#edf4f2",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#006b61",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "label": "Start session",
      "style": {
        "background": "#006b61",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#ffffff",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "label": "Transfer saved session",
      "style": {
        "background": "#edf4f2",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#006b61",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "bold": false,
      "label": "Sample rate mode (0 low · 1 normal · 2 high)",
      "type": "input",
      "value": "1",
    },
    {
      "label": "Disconnect",
      "style": {
        "background": "#fff1ee",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#a63c32",
        "marginTop": "10px",
        "padding": "12px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
  ],
  "styles": {
    "{"background":"#f2f6f4","color":"#172b32","minHeight":"100vh","fontFamily":"-apple-system, BlinkMacSystemFont, sans-serif","boxSizing":"border-box","padding":"24px 16px"}": 1,
    "{"background":"#ffffff","border":"1px solid #e1e8e7","borderRadius":"20px","padding":"22px","marginBottom":"16px"}": 4,
    "{"borderTop":"1px solid #e1e8e7","marginTop":"20px","paddingTop":"12px"}": 1,
    "{"display":"flex","justifyContent":"space-between","gap":"16px","padding":"10px 0","borderBottom":"1px solid #e1e8e7","fontSize":"14px"}": 12,
    "{"display":"inline-block","marginTop":"16px","padding":"6px 11px","borderRadius":"20px","fontSize":"12px","fontWeight":"600","color":"#865b20","background":"#fff0d7"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#006b61","fontSize":"11px","fontWeight":"700","letterSpacing":"2px","marginBottom":"12px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","background":"#f4f7f6","padding":"10px 12px","borderRadius":"10px","fontSize":"13px","marginTop":"8px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px","marginTop":"14px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px","marginTop":"8px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"14px","marginBottom":"18px"}": 4,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"16px","marginTop":"4px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970"}": 12,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#a63c32","background":"#fff1ee","padding":"10px 12px","borderRadius":"10px","fontSize":"13px","marginTop":"8px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#a63c32","fontSize":"14px","marginBottom":"14px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","fontSize":"18px","fontWeight":"700","letterSpacing":"-0.3px","marginBottom":"5px"}": 4,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","fontSize":"32px","fontWeight":"750","letterSpacing":"-1px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","textAlign":"center","fontSize":"10px","letterSpacing":"1.5px","color":"#536970","padding":"10px 0 20px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","textAlign":"right","fontWeight":"600","minWidth":"0"}": 12,
    "{"maxWidth":"480px","margin":"0 auto"}": 1,
    "{"padding":"10px 6px 26px"}": 1,
  },
  "text": [
    "DOFEK  /  ZEPP",
    "Dofek",
    "Your health, connected.",
    "○ Needs attention",
    "Connect to Dofek",
    "Connect your watch to your Dofek account.",
    "Reconnect",
    "Watch recorder",
    "Record a motion session with the Dofek watch app open.",
    "Session",
    "Ready to record",
    "Samples captured",
    "0",
    "Keep the watch app open until recording finishes. Gyroscope data is included automatically when supported.",
    "Sync activity",
    "Delivery status from your watch and phone.",
    "Health sync",
    "idle",
    "Background collection",
    "idle",
    "Motion upload",
    "retrying",
    "Trying again",
    "File transfer",
    "error",
    "Transfer failed",
    "Last health sync",
    "Not synced yet",
    "Advanced",
    "Server configuration and device details.",
    "Server",
    "https://dofek.fit",
    "Use the default server unless you host your own Dofek instance.",
    "Requested mode",
    "NORMAL",
    "Measured sample rate",
    "Not recorded yet",
    "Gyroscope in session",
    "No",
    "Last export",
    "None yet",
    "Disconnect this app from your Dofek account.",
    "DOFEK  ·  YOUR DATA, TOGETHER",
  ],
}
`;

exports[`zepp-main > hides pairing details without valid expiry data 1`] = `
{
  "controls": [
    {
      "label": "Cancel pairing",
      "style": {
        "background": "#edf4f2",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#006b61",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "label": "Start session",
      "style": {
        "background": "#006b61",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#ffffff",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "label": "Transfer saved session",
      "style": {
        "background": "#edf4f2",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#006b61",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "bold": false,
      "label": "Sample rate mode (0 low · 1 normal · 2 high)",
      "type": "input",
      "value": "1",
    },
  ],
  "styles": {
    "{"background":"#f2f6f4","color":"#172b32","minHeight":"100vh","fontFamily":"-apple-system, BlinkMacSystemFont, sans-serif","boxSizing":"border-box","padding":"24px 16px"}": 1,
    "{"background":"#ffffff","border":"1px solid #e1e8e7","borderRadius":"20px","padding":"22px","marginBottom":"16px"}": 4,
    "{"display":"flex","justifyContent":"space-between","gap":"16px","padding":"10px 0","borderBottom":"1px solid #e1e8e7","fontSize":"14px"}": 12,
    "{"display":"inline-block","marginTop":"16px","padding":"6px 11px","borderRadius":"20px","fontSize":"12px","fontWeight":"600","color":"#865b20","background":"#fff0d7"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#006b61","fontSize":"11px","fontWeight":"700","letterSpacing":"2px","marginBottom":"12px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px","marginTop":"14px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px","marginTop":"8px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"14px","marginBottom":"14px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"14px","marginBottom":"18px"}": 4,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"14px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"16px","marginTop":"4px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970"}": 12,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","fontSize":"18px","fontWeight":"700","letterSpacing":"-0.3px","marginBottom":"5px"}": 4,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","fontSize":"32px","fontWeight":"750","letterSpacing":"-1px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","textAlign":"center","fontSize":"10px","letterSpacing":"1.5px","color":"#536970","padding":"10px 0 20px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","textAlign":"right","fontWeight":"600","minWidth":"0"}": 12,
    "{"maxWidth":"480px","margin":"0 auto"}": 1,
    "{"padding":"10px 6px 26px"}": 1,
  },
  "text": [
    "DOFEK  /  ZEPP",
    "Dofek",
    "Your health, connected.",
    "○ Waiting for approval",
    "Finish pairing",
    "Connect your watch to your Dofek account.",
    "Waiting for approval on your phone",
    "Pairing code expired. Cancel pairing, then create a new code.",
    "Watch recorder",
    "Record a motion session with the Dofek watch app open.",
    "Session",
    "Ready to record",
    "Samples captured",
    "0",
    "Keep the watch app open until recording finishes. Gyroscope data is included automatically when supported.",
    "Sync activity",
    "Delivery status from your watch and phone.",
    "Health sync",
    "idle",
    "Background collection",
    "idle",
    "Motion upload",
    "idle",
    "File transfer",
    "idle",
    "Last health sync",
    "Not synced yet",
    "Advanced",
    "Server configuration and device details.",
    "Server",
    "https://dofek.fit",
    "Use the default server unless you host your own Dofek instance.",
    "Requested mode",
    "NORMAL",
    "Measured sample rate",
    "Not recorded yet",
    "Gyroscope in session",
    "No",
    "Last export",
    "None yet",
    "DOFEK  ·  YOUR DATA, TOGETHER",
  ],
}
`;

exports[`zepp-main > preserves pairing, login, and server configuration commands 1`] = `
{
  "controls": [
    {
      "label": "Create pairing code",
      "style": {
        "background": "#006b61",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#ffffff",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "bold": false,
      "label": "Email",
      "type": "input",
      "value": "",
    },
    {
      "bold": false,
      "label": "Password",
      "placeholder": "Your Dofek password",
      "type": "input",
    },
    {
      "label": "Log in",
      "style": {
        "background": "#edf4f2",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#006b61",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "label": "Start session",
      "style": {
        "background": "#006b61",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#ffffff",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "label": "Transfer saved session",
      "style": {
        "background": "#edf4f2",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#006b61",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "bold": false,
      "label": "Server URL",
      "type": "input",
      "value": "https://dofek.fit",
    },
    {
      "bold": false,
      "label": "Sample rate mode (0 low · 1 normal · 2 high)",
      "type": "input",
      "value": "1",
    },
  ],
  "styles": {
    "{"background":"#f2f6f4","color":"#172b32","minHeight":"100vh","fontFamily":"-apple-system, BlinkMacSystemFont, sans-serif","boxSizing":"border-box","padding":"24px 16px"}": 1,
    "{"background":"#ffffff","border":"1px solid #e1e8e7","borderRadius":"20px","padding":"22px","marginBottom":"16px"}": 5,
    "{"display":"flex","justifyContent":"space-between","gap":"16px","padding":"10px 0","borderBottom":"1px solid #e1e8e7","fontSize":"14px"}": 11,
    "{"display":"inline-block","marginTop":"16px","padding":"6px 11px","borderRadius":"20px","fontSize":"12px","fontWeight":"600","color":"#865b20","background":"#fff0d7"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#006b61","fontSize":"11px","fontWeight":"700","letterSpacing":"2px","marginBottom":"12px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px","marginTop":"14px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px","marginTop":"8px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"14px","marginBottom":"18px"}": 5,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"14px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"16px","marginTop":"4px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970"}": 11,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","fontSize":"18px","fontWeight":"700","letterSpacing":"-0.3px","marginBottom":"5px"}": 5,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","fontSize":"32px","fontWeight":"750","letterSpacing":"-1px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","textAlign":"center","fontSize":"10px","letterSpacing":"1.5px","color":"#536970","padding":"10px 0 20px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","textAlign":"right","fontWeight":"600","minWidth":"0"}": 11,
    "{"maxWidth":"480px","margin":"0 auto"}": 1,
    "{"padding":"10px 6px 26px"}": 1,
  },
  "text": [
    "DOFEK  /  ZEPP",
    "Dofek",
    "Your health, connected.",
    "○ Not connected",
    "Connect to Dofek",
    "Connect your watch to your Dofek account.",
    "Create a code, then open Dofek on this phone to approve the connection.",
    "Prefer to log in?",
    "Use your Dofek email and password instead of a pairing code.",
    "Watch recorder",
    "Record a motion session with the Dofek watch app open.",
    "Session",
    "Ready to record",
    "Samples captured",
    "0",
    "Keep the watch app open until recording finishes. Gyroscope data is included automatically when supported.",
    "Sync activity",
    "Delivery status from your watch and phone.",
    "Health sync",
    "idle",
    "Background collection",
    "idle",
    "Motion upload",
    "idle",
    "File transfer",
    "idle",
    "Last health sync",
    "Not synced yet",
    "Advanced",
    "Server configuration and device details.",
    "Use the default server unless you host your own Dofek instance.",
    "Requested mode",
    "NORMAL",
    "Measured sample rate",
    "Not recorded yet",
    "Gyroscope in session",
    "No",
    "Last export",
    "None yet",
    "DOFEK  ·  YOUR DATA, TOGETHER",
  ],
}
`;

exports[`zepp-main > puts the connection and pairing before app controls and advanced details 1`] = `
{
  "controls": [
    {
      "label": "Check connection",
      "style": {
        "background": "#edf4f2",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#006b61",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "label": "Start session",
      "style": {
        "background": "#006b61",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#ffffff",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "label": "Transfer saved session",
      "style": {
        "background": "#edf4f2",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#006b61",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "label": "Sync now",
      "style": {
        "background": "#006b61",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#ffffff",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "bold": false,
      "label": "Sample rate mode (0 low · 1 normal · 2 high)",
      "type": "input",
      "value": "1",
    },
    {
      "label": "Disconnect",
      "style": {
        "background": "#fff1ee",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#a63c32",
        "marginTop": "10px",
        "padding": "12px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
  ],
  "styles": {
    "{"background":"#f2f6f4","color":"#172b32","minHeight":"100vh","fontFamily":"-apple-system, BlinkMacSystemFont, sans-serif","boxSizing":"border-box","padding":"24px 16px"}": 1,
    "{"background":"#ffffff","border":"1px solid #e1e8e7","borderRadius":"20px","padding":"22px","marginBottom":"16px"}": 4,
    "{"borderTop":"1px solid #e1e8e7","marginTop":"20px","paddingTop":"12px"}": 1,
    "{"display":"flex","justifyContent":"space-between","gap":"16px","padding":"10px 0","borderBottom":"1px solid #e1e8e7","fontSize":"14px"}": 12,
    "{"display":"inline-block","marginTop":"16px","padding":"6px 11px","borderRadius":"20px","fontSize":"12px","fontWeight":"600","color":"#006b61","background":"#dff2ea"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#006b61","fontSize":"11px","fontWeight":"700","letterSpacing":"2px","marginBottom":"12px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px","marginTop":"14px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px","marginTop":"8px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"14px","marginBottom":"18px"}": 4,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"14px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"16px","marginTop":"4px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970"}": 12,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","fontSize":"18px","fontWeight":"700","letterSpacing":"-0.3px","marginBottom":"5px"}": 4,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","fontSize":"32px","fontWeight":"750","letterSpacing":"-1px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","textAlign":"center","fontSize":"10px","letterSpacing":"1.5px","color":"#536970","padding":"10px 0 20px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","textAlign":"right","fontWeight":"600","minWidth":"0"}": 12,
    "{"maxWidth":"480px","margin":"0 auto"}": 1,
    "{"padding":"10px 6px 26px"}": 1,
  },
  "text": [
    "DOFEK  /  ZEPP",
    "Dofek",
    "Your health, connected.",
    "● Connected",
    "Connected to Dofek",
    "Connect your watch to your Dofek account.",
    "Your connection has been verified by Dofek.",
    "Watch recorder",
    "Record a motion session with the Dofek watch app open.",
    "Session",
    "Ready to record",
    "Samples captured",
    "0",
    "Keep the watch app open until recording finishes. Gyroscope data is included automatically when supported.",
    "Sync activity",
    "Delivery status from your watch and phone.",
    "Health sync",
    "idle",
    "Background collection",
    "idle",
    "Motion upload",
    "idle",
    "File transfer",
    "idle",
    "Last health sync",
    "Not synced yet",
    "Advanced",
    "Server configuration and device details.",
    "Server",
    "https://dofek.fit",
    "Use the default server unless you host your own Dofek instance.",
    "Requested mode",
    "NORMAL",
    "Measured sample rate",
    "Not recorded yet",
    "Gyroscope in session",
    "No",
    "Last export",
    "None yet",
    "Disconnect this app from your Dofek account.",
    "DOFEK  ·  YOUR DATA, TOGETHER",
  ],
}
`;

exports[`zepp-main > shows a valid pairing code when no QR image is available 1`] = `
{
  "controls": [
    {
      "source": "https://dofek.example/zepp-pairing?code=ABC234",
      "type": "link",
    },
    {
      "label": "Cancel pairing",
      "style": {
        "background": "#edf4f2",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#006b61",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "label": "Start session",
      "style": {
        "background": "#006b61",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#ffffff",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "label": "Transfer saved session",
      "style": {
        "background": "#edf4f2",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#006b61",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
    {
      "bold": false,
      "label": "Sample rate mode (0 low · 1 normal · 2 high)",
      "type": "input",
      "value": "1",
    },
  ],
  "styles": {
    "{"background":"#f2f6f4","color":"#172b32","minHeight":"100vh","fontFamily":"-apple-system, BlinkMacSystemFont, sans-serif","boxSizing":"border-box","padding":"24px 16px"}": 1,
    "{"background":"#ffffff","border":"1px solid #e1e8e7","borderRadius":"20px","padding":"22px","marginBottom":"16px"}": 4,
    "{"display":"flex","justifyContent":"space-between","gap":"16px","padding":"10px 0","borderBottom":"1px solid #e1e8e7","fontSize":"14px"}": 12,
    "{"display":"inline-block","marginTop":"16px","padding":"6px 11px","borderRadius":"20px","fontSize":"12px","fontWeight":"600","color":"#865b20","background":"#fff0d7"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#006b61","fontSize":"11px","fontWeight":"700","letterSpacing":"2px","marginBottom":"12px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"10px","letterSpacing":"1.8px","fontWeight":"700"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px","marginTop":"14px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px","marginTop":"6px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px","marginTop":"8px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px","textAlign":"center","marginTop":"12px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"14px","marginBottom":"18px"}": 4,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"16px","marginTop":"4px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970"}": 12,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","fontSize":"18px","fontWeight":"700","letterSpacing":"-0.3px","marginBottom":"5px"}": 4,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","fontSize":"28px","fontWeight":"700","letterSpacing":"4px","marginTop":"6px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","fontSize":"32px","fontWeight":"750","letterSpacing":"-1px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","textAlign":"center","fontSize":"10px","letterSpacing":"1.5px","color":"#536970","padding":"10px 0 20px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","textAlign":"right","fontWeight":"600","minWidth":"0"}": 12,
    "{"marginTop":"18px","textAlign":"center","color":"#006b61","fontSize":"15px","fontWeight":"600"}": 1,
    "{"maxWidth":"480px","margin":"0 auto"}": 1,
    "{"padding":"10px 6px 26px"}": 1,
    "{"textAlign":"center","background":"#f5f9f7","borderRadius":"14px","padding":"20px 12px","border":"1px solid #e1e8e7"}": 1,
  },
  "text": [
    "DOFEK  /  ZEPP",
    "Dofek",
    "Your health, connected.",
    "○ Waiting for approval",
    "Finish pairing",
    "Connect your watch to your Dofek account.",
    "PAIRING CODE",
    "ABC234",
    "Expires <localized time>",
    "Open Dofek to finish pairing",
    "On another device? Scan the QR or enter this code in Dofek → Settings → Connections.",
    "Watch recorder",
    "Record a motion session with the Dofek watch app open.",
    "Session",
    "Ready to record",
    "Samples captured",
    "0",
    "Keep the watch app open until recording finishes. Gyroscope data is included automatically when supported.",
    "Sync activity",
    "Delivery status from your watch and phone.",
    "Health sync",
    "idle",
    "Background collection",
    "idle",
    "Motion upload",
    "idle",
    "File transfer",
    "idle",
    "Last health sync",
    "Not synced yet",
    "Advanced",
    "Server configuration and device details.",
    "Server",
    "https://dofek.fit",
    "Use the default server unless you host your own Dofek instance.",
    "Requested mode",
    "NORMAL",
    "Measured sample rate",
    "Not recorded yet",
    "Gyroscope in session",
    "No",
    "Last export",
    "None yet",
    "DOFEK  ·  YOUR DATA, TOGETHER",
  ],
}
`;

exports[`zepp-workout > shows the shared QR card and a same-phone pairing link 1`] = `
{
  "controls": [
    {
      "alt": "Dofek Workout pairing QR code",
      "height": 200,
      "src": "https://dofek.example/pairing.svg",
      "style": {
        "background": "white",
        "borderRadius": "8px",
        "display": "block",
        "height": "auto",
        "margin": "0 auto 16px",
        "maxWidth": "100%",
      },
      "type": "image",
      "width": 200,
    },
    {
      "source": "https://dofek.example/zepp-pairing?code=ABC234",
      "type": "link",
    },
    {
      "label": "Cancel pairing",
      "style": {
        "background": "#edf4f2",
        "borderRadius": "12px",
        "boxShadow": "none",
        "color": "#006b61",
        "fontSize": "14px",
        "fontWeight": "600",
        "marginTop": "10px",
        "padding": "12px 16px",
        "textTransform": "none",
        "width": "100%",
      },
      "type": "button",
    },
  ],
  "styles": {
    "{"background":"#f2f6f4","color":"#172b32","minHeight":"100vh","fontFamily":"-apple-system, BlinkMacSystemFont, sans-serif","boxSizing":"border-box","padding":"24px 16px"}": 1,
    "{"background":"#ffffff","border":"1px solid #e1e8e7","borderRadius":"20px","padding":"22px","marginBottom":"16px"}": 4,
    "{"display":"flex","gap":"12px","alignItems":"flex-start","marginBottom":"14px"}": 3,
    "{"display":"flex","justifyContent":"space-between","gap":"16px","padding":"10px 0","borderBottom":"1px solid #e1e8e7","fontSize":"14px"}": 3,
    "{"display":"inline-block","marginTop":"16px","padding":"6px 11px","borderRadius":"20px","fontSize":"12px","fontWeight":"600","color":"#865b20","background":"#fff0d7"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#006b61","background":"#edf4f2","borderRadius":"8px","minWidth":"28px","textAlign":"center","fontSize":"13px","fontWeight":"700","padding":"3px 0"}": 3,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#006b61","fontSize":"11px","fontWeight":"700","letterSpacing":"2px","marginBottom":"12px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"10px","letterSpacing":"1.8px","fontWeight":"700"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px","marginTop":"6px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px","marginTop":"8px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px","textAlign":"center","marginTop":"12px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"12px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"14px","marginBottom":"18px"}": 4,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970","fontSize":"16px","marginTop":"4px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","color":"#536970"}": 3,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","fontSize":"14px","paddingTop":"3px"}": 3,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","fontSize":"18px","fontWeight":"700","letterSpacing":"-0.3px","marginBottom":"5px"}": 4,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","fontSize":"28px","fontWeight":"700","letterSpacing":"4px","marginTop":"6px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","fontSize":"32px","fontWeight":"750","letterSpacing":"-1px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","textAlign":"center","fontSize":"10px","letterSpacing":"1.5px","color":"#536970","padding":"10px 0 20px"}": 1,
    "{"lineHeight":"1.55","overflowWrap":"anywhere","textAlign":"right","fontWeight":"600","minWidth":"0"}": 3,
    "{"marginTop":"18px","textAlign":"center","color":"#006b61","fontSize":"15px","fontWeight":"600"}": 1,
    "{"maxWidth":"480px","margin":"0 auto"}": 1,
    "{"padding":"10px 6px 26px"}": 1,
    "{"textAlign":"center","background":"#f5f9f7","borderRadius":"14px","padding":"20px 12px","border":"1px solid #e1e8e7"}": 1,
  },
  "text": [
    "DOFEK  /  ZEPP",
    "Dofek Workout",
    "Your workouts, connected.",
    "○ Waiting for approval",
    "Finish pairing",
    "Connect this Workout Extension to your Dofek account.",
    "PAIRING CODE",
    "ABC234",
    "Expires <localized time>",
    "Open Dofek to finish pairing",
    "On another device? Scan the QR or enter this code in Dofek → Settings → Connections.",
    "Set up on your watch",
    "Add Dofek Workout to each workout you want to capture.",
    "1",
    "Open Workout and choose a workout.",
    "2",
    "Open its settings, then Motion Extensions.",
    "3",
    "Add Dofek Workout and open its page during your workout.",
    "Collection runs while the workout page is open. Saved samples wait for the phone when it is unavailable.",
    "Sync activity",
    "Delivery status from your watch and phone.",
    "Motion upload",
    "idle",
    "File transfer",
    "idle",
    "Advanced",
    "Server configuration and device details.",
    "Server",
    "https://dofek.fit",
    "Use the default server unless you host your own Dofek instance.",
    "DOFEK  ·  YOUR DATA, TOGETHER",
  ],
}
`;
